# diet_optimization

./: .gitignore  Dockerfile  HOSTING.txt  Makefile  README.md  data_sources.yaml  diet_optimization.lp  disease_state_diet_report.json  disease_state_diet_report.md  food_info.json  food_matches.json  food_physiology_mapping.json  fresh_foods_nutrients_names.json  fresh_foods_nutrients_names_physiology.json  macronutritional_needs.csv  mineral_needs.csv  nutrition.json  optimization_diet.ipynb  optimum_diet.csv  prices.csv  pyproject.toml  vitamin_needs.csv
data/: amino_acids.yaml  carbon_footprint.csv  cooking_yields.yaml  dietary_groups.yaml  dri_overrides_by_profile.yaml  food_groups.yaml  food_name_mapping.csv  nutrient_cadence.yaml  nutrition_overrides.yaml  polyphenol_content.csv  sparse_nutrient_triage.yaml  supplements.yaml  tfp_price_lookup.csv  tfp_prices.csv  user_prefs.example.json
deploy/: diet-opt.env.example  diet-opt.service  run_server.sh
diet_opt/: __init__.py  amino_acids.py  cli.py  data.py  dri.py  fuzzy.py  meal_plan.py  model.py  objectives.py  overrides.py  prefs.py  presets.py  price_sensitivity.py  report.py  solve.py  sparse.py  supplements.py  variety.py  weekly.py  weekly_model.py
docs/: retailer_scraping.md
scripts/: bucket_claude_nulls.py  build_food_table.py  build_priced_foods.py  build_tfp_term_lookup.py  claude_rank_products.py  extract_fdc_all_foods.py  fetch_data.sh  fetch_prices.py  generate_meal_plan.py  merge_prices.py  normalize_prices.py  parse_tfp_xlsx.py  tfp_pricing.py  validate_citations.py
tests/: test_amino_acids.py  (+31 more)
(+2 files in other folders)
